tests/rgs/valid/condition_or.rgs
ACTION run.
EVENT  spotted ENVIRONMENT.
CONDITION is_tired MYSELF.
CONDITION is_armed MYSELF.

DURING ALWAYS:
    WHEN spotted ENVIRONMENT IF is_armed MYSELF OR is_tired MYSELF:
        DO run.
