tests/rgs/syntax_errors/or_no_right_operand.rgs
ACTION run.
EVENT spotted ENVIRONMENT.
CONDITION is_tired MYSELF.
DURING ALWAYS:
    WHEN spotted ENVIRONMENT IF is_tired MYSELF OR:
        DO run.
